--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angular-fire/angularfire.min.js"></script>
 
   </head>
   <body ng-app="starter">
